Transparent tray icon on Linux